DbContext, Users: Register

--- a/SmartEcoA/appsettings.json
+++ b/SmartEcoA/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=SmartEcoA;Username=postgres;Password=postgres;Port=5433"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
