Users: Login, logout

--- a/SmartEcoA/appsettings.json
+++ b/SmartEcoA/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=SmartEcoA;Username=postgres;Password=postgres;Port=5433"
   },
+  "JWTkey": "uS6Nw00tQmCVpd3b",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
