--- a/SmartEcoA/ClientApp/package.json
+++ b/SmartEcoA/ClientApp/package.json
@@ -4,8 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:en": "ng serve --base-href=/en/ --configuration=en --serve-path=/",
+    "start:ru": "ng serve --base-href=/ru/ --configuration=ru --serve-path=/",
+    "start:kk": "ng serve --base-href=/kk/ --configuration=kk --serve-path=/",
     "build": "ng build",
     "build:ssr": "ng run SmartEcoA:server:dev",
+    "build-locale:en": "ng build --prod --i18n-locale en --i18n-format xlf --i18n-file src/locale/messages.en.xlf --output-path=dist/en --baseHref /en/",
+    "build-locale:ru": "ng build --prod --i18n-locale ru --i18n-format xlf --i18n-file src/locale/messages.ru.xlf --output-path=dist/ru --baseHref /ru/",
+    "build-locale:kk": "ng build --prod --i18n-locale kk --i18n-format xlf --i18n-file src/locale/messages.kk.xlf --output-path=dist/kk --baseHref /kk/",
+    "build-locale": "npm run build && npm run build-locale:en && npm run build-locale:ru && npm run build-locale:kk",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
