--- a/SmartEcoA/ClientApp/package.json
+++ b/SmartEcoA/ClientApp/package.json
@@ -9,13 +9,16 @@
     "start:kk": "ng serve --base-href=/kk/ --configuration=kk --serve-path=/",
     "build": "ng build",
     "build:ssr": "ng run SmartEcoA:server:dev",
-    "build-locale:en": "ng build --prod --i18n-locale en --i18n-format xlf --i18n-file src/locale/messages.en.xlf --output-path=dist/en --baseHref /en/",
-    "build-locale:ru": "ng build --prod --i18n-locale ru --i18n-format xlf --i18n-file src/locale/messages.ru.xlf --output-path=dist/ru --baseHref /ru/",
-    "build-locale:kk": "ng build --prod --i18n-locale kk --i18n-format xlf --i18n-file src/locale/messages.kk.xlf --output-path=dist/kk --baseHref /kk/",
+    "build-locale:en": "ng build --prod --i18n-locale en --i18n-format xlf --i18n-file src/i18n/messages.en.xlf --output-path=dist/en --baseHref /en/",
+    "build-locale:ru": "ng build --prod --i18n-locale ru --i18n-format xlf --i18n-file src/i18n/messages.ru.xlf --output-path=dist/ru --baseHref /ru/",
+    "build-locale:kk": "ng build --prod --i18n-locale kk --i18n-format xlf --i18n-file src/i18n/messages.kk.xlf --output-path=dist/kk --baseHref /kk/",
     "build-locale": "npm run build && npm run build-locale:en && npm run build-locale:ru && npm run build-locale:kk",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "extract-i18n": "ng xi18n SmartEcoA --i18n-format xlf --output-path i18n --i18n-locale ru && ng run SmartEcoA:xliffmerge",
+    "start-en": "ng serve --configuration=en",
+    "start-kk": "ng serve --configuration=kk"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +34,7 @@
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@ngx-i18nsupport/tooling": "^8.0.3",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "aspnet-prerendering": "^3.0.1",
@@ -48,6 +52,7 @@
     "@angular/cli": "^8.3.26",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.12",
+    "@ngx-i18nsupport/ngx-i18nsupport": "^1.1.6",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.6",
