--- a/SmartEcoA/SmartEcoA.csproj
+++ b/SmartEcoA/SmartEcoA.csproj
@@ -42,12 +42,14 @@
     <None Remove="ClientApp\src\app\dataproviders\create.component.ts" />
     <None Remove="ClientApp\src\app\dataproviders\dataprovider.model.ts" />
     <None Remove="ClientApp\src\app\dataproviders\dataprovider.service.ts" />
+    <None Remove="ClientApp\src\app\dataproviders\delete.component.ts" />
     <None Remove="ClientApp\src\app\dataproviders\details.component.ts" />
     <None Remove="ClientApp\src\app\dataproviders\edit.component.ts" />
     <None Remove="ClientApp\src\app\dataproviders\index.component.ts" />
     <None Remove="ClientApp\src\app\dataproviders\list.component.ts" />
     <None Remove="ClientApp\src\app\locale\index.component.ts" />
     <None Remove="ClientApp\src\app\measuredparameters\create.component.ts" />
+    <None Remove="ClientApp\src\app\measuredparameters\delete.component.ts" />
     <None Remove="ClientApp\src\app\measuredparameters\details.component.ts" />
     <None Remove="ClientApp\src\app\measuredparameters\edit.component.ts" />
     <None Remove="ClientApp\src\app\measuredparameters\index.component.ts" />
@@ -56,6 +58,7 @@
     <None Remove="ClientApp\src\app\measuredparameters\measuredparameter.service.ts" />
     <None Remove="ClientApp\src\app\paginator\paginator.component.ts" />
     <None Remove="ClientApp\src\app\pollutionenvironments\create.component.ts" />
+    <None Remove="ClientApp\src\app\pollutionenvironments\delete.component.ts" />
     <None Remove="ClientApp\src\app\pollutionenvironments\details.component.ts" />
     <None Remove="ClientApp\src\app\pollutionenvironments\edit.component.ts" />
     <None Remove="ClientApp\src\app\pollutionenvironments\index.component.ts" />
@@ -63,6 +66,7 @@
     <None Remove="ClientApp\src\app\pollutionenvironments\pollutionenvironment.model.ts" />
     <None Remove="ClientApp\src\app\pollutionenvironments\pollutionenvironment.service.ts" />
     <None Remove="ClientApp\src\app\projects\create.component.ts" />
+    <None Remove="ClientApp\src\app\projects\delete.component.ts" />
     <None Remove="ClientApp\src\app\projects\details.component.ts" />
     <None Remove="ClientApp\src\app\projects\edit.component.ts" />
     <None Remove="ClientApp\src\app\projects\index.component.ts" />
@@ -70,6 +74,7 @@
     <None Remove="ClientApp\src\app\projects\project.model.ts" />
     <None Remove="ClientApp\src\app\projects\project.service.ts" />
     <None Remove="ClientApp\src\app\users\changepassword.component.ts" />
+    <None Remove="ClientApp\src\app\users\delete.component.ts" />
     <None Remove="ClientApp\src\app\users\details.component.ts" />
     <None Remove="ClientApp\src\app\users\edit.component.ts" />
     <None Remove="ClientApp\src\app\users\index.component.ts" />
@@ -87,12 +92,16 @@
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\create.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\dataprovider.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\dataprovider.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\dataproviders\delete.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\details.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\edit.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\index.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\list.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\locale\index.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\measuredparameters\create.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\measuredparameters\delete.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\measuredparameters\details.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\measuredparameters\edit.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\measuredparameters\index.component.ts" />
@@ -101,6 +110,9 @@
     <TypeScriptCompile Include="ClientApp\src\app\measuredparameters\measuredparameter.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\paginator\paginator.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\create.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\delete.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\details.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\edit.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\index.component.ts" />
@@ -108,6 +120,9 @@
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\pollutionenvironment.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\pollutionenvironment.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\projects\create.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\projects\delete.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\projects\project.model.ts">
@@ -129,6 +144,9 @@
       <SubType>Code</SubType>
     </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\users\changepassword.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\users\delete.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\users\details.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\users\edit.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\users\index.component.ts" />
