--- a/SmartEcoA/SmartEcoA.csproj
+++ b/SmartEcoA/SmartEcoA.csproj
@@ -66,6 +66,11 @@
     <None Remove="ClientApp\src\app\pollutionenvironments\list.component.ts" />
     <None Remove="ClientApp\src\app\pollutionenvironments\pollutionenvironment.model.ts" />
     <None Remove="ClientApp\src\app\pollutionenvironments\pollutionenvironment.service.ts" />
+    <None Remove="ClientApp\src\app\postdatadivideds\details.component.ts" />
+    <None Remove="ClientApp\src\app\postdatadivideds\index.component.ts" />
+    <None Remove="ClientApp\src\app\postdatadivideds\list.component.ts" />
+    <None Remove="ClientApp\src\app\postdatadivideds\postdatadivided.model.ts" />
+    <None Remove="ClientApp\src\app\postdatadivideds\postdatadivided.service.ts" />
     <None Remove="ClientApp\src\app\postdatas\details.component.ts" />
     <None Remove="ClientApp\src\app\postdatas\index.component.ts" />
     <None Remove="ClientApp\src\app\postdatas\list.component.ts" />
@@ -136,6 +141,21 @@
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\list.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\pollutionenvironment.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\pollutionenvironments\pollutionenvironment.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\postdatadivideds\details.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\postdatadivideds\index.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\postdatadivideds\list.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\postdatadivideds\postdatadivided.service.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\postdatadivideds\postdatadivided.model.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\postdatas\details.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
