CarModelSmokeMeter, CarPostDataSmokeMeter. CarModel was removed.

--- a/SmartEcoA/ClientApp/package.json
+++ b/SmartEcoA/ClientApp/package.json
@@ -29,10 +29,13 @@
     "@angular/core": "8.2.12",
     "@angular/forms": "8.2.12",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^11.1.2",
     "@angular/platform-browser": "8.2.12",
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@mat-datetimepicker/core": "^3.1.0",
+    "@mat-datetimepicker/moment": "^3.1.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@ngx-i18nsupport/tooling": "^8.0.3",
     "@ngx-translate/core": "^12.1.2",
@@ -42,6 +45,7 @@
     "core-js": "^3.3.3",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "moment": "^2.29.1",
     "oidc-client": "^1.9.1",
     "ol": "^6.5.0",
     "popper.js": "^1.16.0",
