--- a/SmartEcoA/SmartEcoA.csproj
+++ b/SmartEcoA/SmartEcoA.csproj
@@ -39,14 +39,22 @@
     <None Remove="ClientApp\src\app\administration\administration.component.ts" />
     <None Remove="ClientApp\src\app\authorize\authorize.guard.ts" />
     <None Remove="ClientApp\src\app\authorize\authorize.interceptor.ts" />
-    <None Remove="ClientApp\src\app\carmodels\carmodel.model.ts" />
-    <None Remove="ClientApp\src\app\carmodels\carmodel.service.ts" />
-    <None Remove="ClientApp\src\app\carmodels\create.component.ts" />
-    <None Remove="ClientApp\src\app\carmodels\delete.component.ts" />
-    <None Remove="ClientApp\src\app\carmodels\details.component.ts" />
-    <None Remove="ClientApp\src\app\carmodels\edit.component.ts" />
-    <None Remove="ClientApp\src\app\carmodels\index.component.ts" />
-    <None Remove="ClientApp\src\app\carmodels\list.component.ts" />
+    <None Remove="ClientApp\src\app\carmodelsmokemeters\carmodelsmokemeter.model.ts" />
+    <None Remove="ClientApp\src\app\carmodelsmokemeters\carmodelsmokemeter.service.ts" />
+    <None Remove="ClientApp\src\app\carmodelsmokemeters\create.component.ts" />
+    <None Remove="ClientApp\src\app\carmodelsmokemeters\delete.component.ts" />
+    <None Remove="ClientApp\src\app\carmodelsmokemeters\details.component.ts" />
+    <None Remove="ClientApp\src\app\carmodelsmokemeters\edit.component.ts" />
+    <None Remove="ClientApp\src\app\carmodelsmokemeters\index.component.ts" />
+    <None Remove="ClientApp\src\app\carmodelsmokemeters\list.component.ts" />
+    <None Remove="ClientApp\src\app\carpostdatasmokemeters\carpostdatasmokemeter.model.ts" />
+    <None Remove="ClientApp\src\app\carpostdatasmokemeters\carpostdatasmokemeter.service.ts" />
+    <None Remove="ClientApp\src\app\carpostdatasmokemeters\create.component.ts" />
+    <None Remove="ClientApp\src\app\carpostdatasmokemeters\delete.component.ts" />
+    <None Remove="ClientApp\src\app\carpostdatasmokemeters\details.component.ts" />
+    <None Remove="ClientApp\src\app\carpostdatasmokemeters\edit.component.ts" />
+    <None Remove="ClientApp\src\app\carpostdatasmokemeters\index.component.ts" />
+    <None Remove="ClientApp\src\app\carpostdatasmokemeters\list.component.ts" />
     <None Remove="ClientApp\src\app\carposts\carpost.model.ts" />
     <None Remove="ClientApp\src\app\carposts\carpost.service.ts" />
     <None Remove="ClientApp\src\app\carposts\create.component.ts" />
@@ -126,28 +134,52 @@
     <TypeScriptCompile Include="ClientApp\src\app\administration\administration.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\authorize\authorize.guard.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\authorize\authorize.interceptor.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\carmodels\carmodel.model.ts">
+    <TypeScriptCompile Include="ClientApp\src\app\carmodelsmokemeters\carmodelsmokemeter.model.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="ClientApp\src\app\carmodels\carmodel.service.ts">
+    <TypeScriptCompile Include="ClientApp\src\app\carmodelsmokemeters\carmodelsmokemeter.service.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="ClientApp\src\app\carmodels\create.component.ts">
+    <TypeScriptCompile Include="ClientApp\src\app\carmodelsmokemeters\create.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="ClientApp\src\app\carmodels\delete.component.ts">
+    <TypeScriptCompile Include="ClientApp\src\app\carmodelsmokemeters\delete.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="ClientApp\src\app\carmodels\details.component.ts">
+    <TypeScriptCompile Include="ClientApp\src\app\carmodelsmokemeters\details.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="ClientApp\src\app\carmodels\edit.component.ts">
+    <TypeScriptCompile Include="ClientApp\src\app\carmodelsmokemeters\edit.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="ClientApp\src\app\carmodels\index.component.ts">
+    <TypeScriptCompile Include="ClientApp\src\app\carmodelsmokemeters\index.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="ClientApp\src\app\carmodels\list.component.ts">
+    <TypeScriptCompile Include="ClientApp\src\app\carmodelsmokemeters\list.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\carpostdatasmokemeters\carpostdatasmokemeter.service.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\carpostdatasmokemeters\carpostdatasmokemeter.model.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\carpostdatasmokemeters\create.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\carpostdatasmokemeters\delete.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\carpostdatasmokemeters\details.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\carpostdatasmokemeters\edit.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\carpostdatasmokemeters\index.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\carpostdatasmokemeters\list.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\carposts\carpost.model.ts">
